.gsd/exec/686cc0ba-4e43-4262-80b8-e86101e25b71.stderr
file:///home/cid/projects-personal/umb/[eval1]:2
import { ensureDbOpen } from "./src/resources/extensions/gsd/gsd-db.ts";
         ^^^^^^^^^^^^
SyntaxError: The requested module './src/resources/extensions/gsd/gsd-db.ts' does not provide an export named 'ensureDbOpen'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:268:26)
    at async ModuleLoader.executeModuleJob (node:internal/modules/esm/loader:265:20)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.1
